@@ -251,6 +251,12 @@ BEGIN {
 			return;
 		}
 	}
+	if(defined($^V) && ($^V ge 'v5.14.0')) {
+		if(${^GLOBAL_PHASE} eq 'DESTRUCT') {	# >= 5.14.0 only
+			CORE::warn(@_);
+			return;
+		}
+	}
         if ($DISPATCHER) {
             $LAST = \@_;
 	    if(ref($DISPATCHER) =~ /^Log::Log4perl/) {
